// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Clickable Button 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  padding: 0;
  border-style: none;
  outline: none;
  color: inherit;
  text-rendering: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  word-spacing: inherit;
  font: inherit;
  margin: 0;
  overflow: visible;
  text-transform: none;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

<div
  data-dark={false}
>
  <button
    className="c0"
    onClick={[Function]}
  >
    button
  </button>
</div>
`;

exports[`Storyshots Clickable Link 1`] = `
.c0 {
  color: inherit;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0 .text {
  top: calc(1em + 2em);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

<div
  data-dark={false}
>
  <a
    aria-disabled={false}
    className="c0"
    href="#"
    onClick={[Function]}
  >
    link
  </a>
</div>
`;
